RESOLVED FIXED302585
CMSampleBuffer serialiser doesn't handle when kCMFormatDescriptionExtension_SampleDescriptionExtensionAtoms contains more than one key
https://bugs.webkit.org/show_bug.cgi?id=302585
Summary CMSampleBuffer serialiser doesn't handle when kCMFormatDescriptionExtension_S...
Jean-Yves Avenard [:jya]
Reported 2025-11-15 23:00:03 PST
When serialising a CMSampleBuffer to be transferred over IPC we first convert it to a MediaSampleBlock and its TrackInfo. The file loaded by the test `LayoutTests/media/media-source/media-managedmse-webvtt-track.html ` causes a decoding error when MediaSourceUseRemoteAudioVideoRenderer is enabled. The reason is that the file content/bip-bop-webvtt-frag.mp4's `avc1` box contains two keys: that standard `avcC` and a `btrt` one. The code to convert the CMFormatDescriptionRef to a VideoInfo createVideoInfoFromFormatDescription assumes that the required data to decode the video when two keys are present is the first one. But that's not always the case.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-11-15 23:00:11 PST
Jean-Yves Avenard [:jya]
Comment 2 2025-11-15 23:17:07 PST
EWS
Comment 3 2025-11-17 18:29:27 PST
Committed 303154@main (05d2e2c1d540): <https://commits.webkit.org/303154@main> Reviewed commits have been landed. Closing PR #54000 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.